# aurorashell

./: Cargo.toml  README.md  flake.nix
lib/auroraguilib/: Cargo.toml
modules/test_module/: Cargo.toml  build.sh
modules/test_module/lib/aurorashell_module/: Cargo.toml
modules/test_module/lib/aurorashell_module/src/: lib.rs  setup.rs  surface.rs  theme.rs  view.rs
modules/test_module/lib/aurorashell_module/src/register/: interval.rs  mod.rs  pulseaudio.rs
modules/test_module/lib/aurorashell_module/src/widget/: button.rs  column.rs  mod.rs  row.rs  slider.rs  stack.rs  text.rs
modules/test_module/lib/aurorashell_module_common/: Cargo.toml
modules/test_module/lib/aurorashell_module_macros/: Cargo.toml
modules/test_module/lib/aurorashell_module_macros/src/: lib.rs
modules/test_module/src/: lib.rs
src/: app.rs  audio.rs  main.rs  sink.rs  theme.rs
src/runtime/: mod.rs  module.rs  ui.rs
src/runtime/wasm/: api.rs  de.rs  fs.rs  id.rs  messages.rs  mod.rs  state.rs  ui.rs
src/services/: audio_old.rs  interval.rs  mod.rs
src/services/audio/: data.rs  messages.rs  mod.rs  register.rs  se.rs  state.rs
widgets/audio/: Cargo.toml
widgets/audio/src/: main.rs  theme.rs
