[package]
name = "aurorashell"
version = "0.1.0"
edition = "2024"

[dependencies]
auroraguilib = { path = "./lib/auroraguilib/" }

iced = { git = "https://github.com/pop-os/iced", features = [
  "tokio",
  "wgpu",
  "winit",
  "wayland",
  "multi-window",
  "lazy",
  "advanced"
] }
tokio = { version = "1.43.0", features = ["full"] }
pulse = { package = "libpulse-binding", version = "2.28.2" }
config = { version = "0.15.9", default-features = false, features = ["toml"] }

iced_futures = "0.13.2"

anyhow = "1.0.97"
chrono = "0.4.40"
flume = "0.11.1"

