[package]
name = "aurorashell"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/pop-os/iced", features = [
  "tokio",
  "wgpu",
  "winit",
  "wayland",
  "multi-window",
  "lazy",
  "advanced"
] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

wasmtime = "32.0"
wasmtime-wasi = "32.0"

pulse = { package = "libpulse-binding", version = "2.28" }

anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
derivative = "2.2"
fern = { version = "0.7", features = ["colored"] }
flume = "0.11"
humantime = "2.2"
log = "0.4"

